--- a/index.html
+++ b/index.html
@@ -2,51 +2,102 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>主页面</title>
+  <title>主页面 - maimai数据查询系统</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f7f7f7;
-      margin: 0;
-      padding: 40px;
+    :root {
+      --gradient-start: #2c3e50;
+      --gradient-end: #3498db;
+    }
+
+    /* 全屏背景视频 */
+    .bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* 让视频填充整个屏幕 */
+      z-index: -1; /* 确保视频在背景层 */
+    }
+
+    /* 让内容整体下移 400px */
+    .content {
+      position: relative;
+      z-index: 1;
       text-align: center;
+      margin-top: 300px; /* 下移 400px */
     }
+
     h1 {
-      margin-bottom: 30px;
+      font-size: 2.8rem;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+      animation: titleFloat 2s ease-in-out infinite;
     }
+
+    .btn-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
     .btn {
-      display: inline-block;
-      padding: 15px 30px;
-      margin: 10px;
-      font-size: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1.5rem 2rem;
+      font-size: 1.1rem;
       text-decoration: none;
-      color: #fff;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
+      color: white;
+      border-radius: 15px;
+      transition: all 0.4s ease;
+      background: rgba(255,255,255,0.2);
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(255,255,255,0.2);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
     }
-    .btn.pc {
-      background-color: #28a745;
-    }
-    .btn.rating {
-      background-color: #007bff;
-    }
-    .btn.submit {
-      background-color: #ffc107;
-    }
-    .btn.players {
-      background-color: #17a2b8;
-    }
+
     .btn:hover {
-      opacity: 0.8;
+      transform: translateY(-5px);
+      box-shadow: 0 12px 32px rgba(0,0,0,0.2);
+    }
+
+    /* 不同按钮颜色 */
+    .btn.pc { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
+    .btn.rating { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
+    .btn.players { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
+    .btn.submit { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
+
+    /* 响应式调整 */
+    @media (max-width: 768px) {
+      h1 { font-size: 2rem; }
+      .btn { padding: 1rem 1.5rem; font-size: 1rem; }
     }
   </style>
 </head>
 <body>
-  <h1>欢迎使用maimai数据查询系统</h1>
-  
-  <a class="btn pc" href="pc.html">PC 排行榜</a>
-  <a class="btn rating" href="rating.html">DX Rating 排行榜</a>
-  <a class="btn players" href="data.html">玩家数据</a> <!-- 新增的玩家排行榜按钮 -->
-  <a class="btn submit" href="dataget.html">提交数据</a>
+
+  <!-- 背景视频 -->
+  <video class="bg-video" autoplay loop muted>
+    <source src="maimaibud.mp4" type="video/mp4">
+    您的浏览器不支持视频播放。
+  </video>
+
+  <!-- 主要内容，向下移动 400px -->
+  <div class="content">
+    <h1>maimai数据查询系统</h1>
+    
+    <div class="btn-container">
+      <a class="btn pc" href="pc.html"><i class="fas fa-desktop"></i> PC数排行榜</a>
+      <a class="btn rating" href="rating.html"><i class="fas fa-chart-line"></i> DX Rating 排行榜</a>
+      <a class="btn players" href="data.html"><i class="fas fa-users"></i> 玩家数据</a>
+      <a class="btn submit" href="dataget.html"><i class="fas fa-upload"></i> 提交数据</a>
+    </div>
+  </div>
+
+  <!-- Font Awesome 图标 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </body>
 </html>
