--- a/index.html
+++ b/index.html
@@ -4,87 +4,107 @@
   <meta charset="UTF-8">
   <title>主页面 - maimai数据查询系统</title>
   <style>
-    :root {
-      --gradient-start: #2c3e50;
-      --gradient-end: #3498db;
+    @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
+
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), /* 调亮背景遮罩 */
+                  url('mai.png') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
+      position: relative;
+      overflow-x: hidden;
     }
 
-    /* 全屏背景视频 */
-    .bg-video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* 让视频填充整个屏幕 */
-      z-index: -1; /* 确保视频在背景层 */
-    }
-
-    /* 让内容整体下移 400px */
     .content {
       position: relative;
       z-index: 1;
       text-align: center;
-      margin-top: 300px; /* 下移 400px */
+      padding: 2rem;
+      margin-top: 0px;
+      animation: fadeIn 1s ease-in;
     }
 
     h1 {
-      font-size: 2.8rem;
-      color: white;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-      animation: titleFloat 2s ease-in-out infinite;
+      font-size: 3.5rem;
+      margin-bottom: 3rem;
+      text-shadow: 0 4px 6px rgba(0,0,0,0.5); /* 增强文字阴影 */
+      transform: translateY(-50px);
+      opacity: 0;
+      animation: slideDown 0.8s ease-out 0.3s forwards;
     }
 
     .btn-container {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+      max-width: 600px;
+      margin: 0 auto;
     }
 
     .btn {
       display: flex;
       align-items: center;
-      justify-content: center;
-      padding: 1.5rem 2rem;
-      font-size: 1.1rem;
-      text-decoration: none;
-      color: white;
+      gap: 1rem;
+      padding: 1.5rem 2.5rem;
+      width: 100%;
       border-radius: 15px;
-      transition: all 0.4s ease;
-      background: rgba(255,255,255,0.2);
-      backdrop-filter: blur(8px);
-      border: 1px solid rgba(255,255,255,0.2);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      text-decoration: none;
+      font-size: 1.3rem;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3); /* 增强按钮阴影 */
+      background: rgba(255,255,255,0.2); /* 调亮按钮背景 */
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255,255,255,0.3); /* 调亮按钮边框 */
     }
 
     .btn:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 32px rgba(0,0,0,0.2);
+      transform: translateY(-3px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+      background: rgba(255,255,255,0.3); /* 调亮悬停背景 */
+    }
+
+    .btn i {
+      width: 30px;
+      text-align: center;
     }
 
     /* 不同按钮颜色 */
-    .btn.pc { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
-    .btn.rating { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
-    .btn.players { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
-    .btn.submit { background: linear-gradient(45deg, #43bfdf, #43bfdf); }
+    .pc { color: #439c46; border-color: #3f8f40; }
+    .rating { color: #2196F3; border-color: #2196F3; }
+    .players { color: #FF9800; border-color: #FF9800; }
+    .submit { color: #9C27B0; border-color: #9C27B0; }
 
-    /* 响应式调整 */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideDown {
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     @media (max-width: 768px) {
-      h1 { font-size: 2rem; }
-      .btn { padding: 1rem 1.5rem; font-size: 1rem; }
+      h1 {
+        font-size: 2.5rem;
+      }
+      
+      .btn {
+        padding: 1rem 1.5rem;
+        font-size: 1.1rem;
+      }
     }
   </style>
 </head>
 <body>
-
-  <!-- 背景视频 -->
-  <video class="bg-video" autoplay loop muted>
-    <source src="maimaibud.mp4" type="video/mp4">
-    您的浏览器不支持视频播放。
-  </video>
-
   <!-- 主要内容，向下移动 400px -->
   <div class="content">
     <h1>maimai数据查询系统</h1>
@@ -96,8 +116,5 @@
       <a class="btn submit" href="dataget.html"><i class="fas fa-upload"></i> 提交数据</a>
     </div>
   </div>
-
-  <!-- Font Awesome 图标 -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </body>
 </html>
