--- a/pc.html
+++ b/pc.html
@@ -76,7 +76,7 @@
     <ul class="list" id="rankingList">
       <li class="list-item message">正在加载数据...</li>
     </ul>
-    <a class="back-link" href="index.html">返回主页面</a>
+    <a class="back-link" href="afterlogin.html">返回主页面</a>
   </div>
 
   <script>
