--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
           messageEl.textContent = '登录成功！';
           messageEl.style.color = 'green';
           // 登录成功后跳转到主页面
-          window.location.href = 'index.html';
+          window.location.href = 'afterlogin.html';
         } else {
           messageEl.textContent = data.message || '登录失败';
           messageEl.style.color = 'red';
