--- a/reg.html
+++ b/reg.html
@@ -67,7 +67,7 @@
   <div class="container">
     <h2>注册</h2>
     <form id="registerForm">
-      <input type="text" id="name" placeholder="用户名" required>
+      <input type="text" id="name" placeholder="用户名（你的maimai昵称）" required>
       <input type="password" id="password" placeholder="密码" required>
       <button type="submit">注册</button>
     </form>
