--- a/afterlogin.html
+++ b/afterlogin.html
@@ -115,7 +115,7 @@
       <a class="btn pc" href="pc.html"><i class="fas fa-desktop"></i> PC数排行榜</a>
       <a class="btn rating" href="rating.html"><i class="fas fa-chart-line"></i> DX Rating 排行榜</a>
       <a class="btn players" href="data.html"><i class="fas fa-users"></i> 玩家数据</a>
-      <a class="btn submit" href="dataget.html"><i class="fas fa-upload"></i> 提交数据</a>
+      <a class="btn submit" href="dataget.html"><i class="fas fa-upload"></i> 提交数据(修改数据）</a>
     </div>
   </div>
 
