--- a/pc.html
+++ b/pc.html
@@ -56,6 +56,10 @@
       width: 80px;
       text-align: right;
     }
+    .self {
+      color: #ff8c00;  /* 自己的标识，橙色 */
+      font-weight: bold;
+    }
     .message {
       text-align: center;
       padding: 20px;
@@ -80,6 +84,9 @@
   </div>
 
   <script>
+    // 获取当前登录用户的用户名
+    const username = localStorage.getItem('username');
+
     fetch('https://pit5mbkzoy.hzh.sealos.run/get-pc')
       .then(response => {
         if (!response.ok) {
@@ -100,10 +107,14 @@
         data.forEach((item, index) => {
           const li = document.createElement('li');
           li.className = 'list-item';
+
+          // 判断是否是当前登录的用户
+          const isSelf = item.name === username;
+
           li.innerHTML = `
-            <span class="rank">${index + 1}</span>
-            <span class="name">${item.name}</span>
-            <span class="pc">${item.pc}</span>
+            <span class="rank ${isSelf ? 'self' : ''}">${index + 1}</span>
+            <span class="name ${isSelf ? 'self' : ''}">${item.name}</span>
+            <span class="pc ${isSelf ? 'self' : ''}">${item.pc}</span>
           `;
           listEl.appendChild(li);
         });
